corrected pom.xml

--- a/mobtravel/pom.xml
+++ b/mobtravel/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mobiquity</groupId>
-	<artifactId>mobtravelapp</artifactId>
+	<artifactId>mobtravel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mobtravelapp</name>
+	<name>mobtravel</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
