--- a/mobtravelapp/src/main/resources/application.properties
+++ b/mobtravelapp/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 ns.nl.api.url=https://gateway.apiportal.ns.nl/public-reisinformatie/api/v3/trips?{0}&{1}&{2}
+logger = LoggerFactory.getLogger(TravelService.class)
