--- a/mobtravelapp/pom.xml
+++ b/mobtravelapp/pom.xml
@@ -54,6 +54,12 @@
 			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+<!--			<version>1.18.10</version>-->
+<!--			<scope>provided</scope>-->
+		</dependency>
 
 	</dependencies>
 
