--- a/helm/hello-world/templates/deployment.yaml
+++ b/helm/hello-world/templates/deployment.yaml
@@ -18,4 +18,14 @@ spec:
       containers:
       - name: hello-world-container
         image: nginx:1.17-alpine
-
+      env:
+        - name: NSAPIKEY
+          valueFrom:
+            secretKeyRef:
+              name: nsapikey
+              key: NSAPIKEY
+        - name: OPENWEATHERAPIKEY
+          valueFrom:
+            secretKeyRef:
+              name: openweatherapikey
+              key: OPENWEATHERAPIKEY
