Bugfix: use workaround for Helm issue #33766
Downgrading a service from `LoadBalancer` to `ClusterIP` type fails.
A workaround is to set an empty `nodePort` field under `spec.ports`.

See:
https://github.com/kubernetes/kubernetes/issues/33766#issuecomment-422905505

--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -9,3 +9,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+      nodePort:   # WORKAROUND for Kubernetes issue #33766
+                  # (an empty value for `nodePort`)
