--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -2,12 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:473293451041:certificate/21384dfa-83fa-4d72-b10a-b42d62b3cf00
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+  labels:
+    app: hello-world
 spec:
+  type: LoadBalancer
   selector:
     app: hello-world
   ports:
     - protocol: TCP
-      port: 80
+      port: 443
       targetPort: 80
-      nodePort:   # WORKAROUND for Kubernetes issue #33766
-                  # (an empty value for `nodePort`)
