--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:473293451041:certificate/21384dfa-83fa-4d72-b10a-b42d62b3cf00
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+#  annotations:
+#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:473293451041:certificate/21384dfa-83fa-4d72-b10a-b42d62b3cf00
+#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
   labels:
     app: hello-world
 spec:
@@ -13,5 +14,5 @@ spec:
     app: hello-world
   ports:
     - protocol: TCP
-      port: 443
+      port: 80
       targetPort: 80
