Add API key for Dark Sky, also update a commented-out ARN

--- a/helm/hello-world/templates/deployment.yaml
+++ b/helm/hello-world/templates/deployment.yaml
@@ -24,6 +24,11 @@ spec:
               secretKeyRef:
                 name: nsapikey
                 key: NSAPIKEY
+          - name: DARKSKYAPIKEY
+            valueFrom:
+              secretKeyRef:
+                name: darkskyapikey
+                key: DARKSKYAPIKEY
           - name: OPENWEATHERAPIKEY
             valueFrom:
               secretKeyRef:
