Made call Weather API & Done WeatherService Test

--- a/mobtravelapp/src/main/resources/application.properties
+++ b/mobtravelapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 ns.nl.api.url=https://gateway.apiportal.ns.nl/public-reisinformatie/api/v3/trips?{0}&{1}&{2}
-darksky.net.api.url=https://api.darksky.net/forecast/{0},{1},{2}
+darksky.net.api.url=https://api.darksky.net/forecast/{0}/{1},{2},{3}
 
 logger = LoggerFactory.getLogger(TravelService.class)
