--- a/mobtravelapp/src/main/resources/application.properties
+++ b/mobtravelapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-ns.nl.api.url=https://gateway.apiportal.ns.nl/public-reisinformatie/api/v3/trips?{0}&{1}&{2}
-darksky.net.api.url=https://api.darksky.net/forecast/{0}/{1},{2},{3}
+api.ns.nl.url=https://gateway.apiportal.ns.nl/public-reisinformatie/api/v3/trips?{0}&{1}&{2}
+api.darksky.net.url=https://api.darksky.net/forecast/{0}/{1},{2},{3}
 
-logger = LoggerFactory.getLogger(TravelService.class)
+api.logger = LoggerFactory.getLogger(TravelService.class)
