--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-service
-#  annotations:
-#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
-#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
   labels:
     app: hello-world
 spec:
@@ -13,6 +13,11 @@ spec:
   selector:
     app: hello-world
   ports:
-    - protocol: TCP
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 80
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
