--- a/mobtravelapp/src/main/resources/application.properties
+++ b/mobtravelapp/src/main/resources/application.properties
@@ -2,3 +2,5 @@ api.ns.nl.url=https://gateway.apiportal.ns.nl/public-reisinformatie/api/v3/trips
 api.darksky.net.url=https://api.darksky.net/forecast/{0}/{1},{2},{3}
 
 api.logger = LoggerFactory.getLogger(TravelService.class)
+
+server.port = 80
