--- a/helm/hello-world/templates/ingress.yaml
+++ b/helm/hello-world/templates/ingress.yaml
@@ -5,16 +5,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/backend-protocol: HTTP
+#    alb.ingress.kubernetes.io/backend-protocol: HTTP
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
   labels:
     app: hello-world
 spec:
-  backend:
-    serviceName: hello-world-service
-    servicePort: 30001
   rules:
     - http:
         paths:
@@ -22,3 +19,7 @@ spec:
             backend:
               serviceName: ssl-redirect
               servicePort: use-annotation
+          - path: /*
+            backend:
+              serviceName: hello-world-service
+              servicePort: 443
