--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -4,12 +4,14 @@ metadata:
   name: hello-world-service
   labels:
     app: hello-world
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
 spec:
-  type: NodePort
+  type: LoadBalancer
+  ports:
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 80
   selector:
     app: hello-world
-  ports:
-    - protocol: TCP
-      port: 1234
-      nodePort: 30001
-      targetPort: 80
