Further simplify Helm charts
Now the Service listens with HTTP on port 80, and Ingress points
to its servicePort instead of its nodePort. It's nearly the same
as 5d45b5fda3, except that *this one* works.

--- a/helm/mob-nsapp/templates/service.yaml
+++ b/helm/mob-nsapp/templates/service.yaml
@@ -4,14 +4,12 @@ metadata:
   name: mob-nsapp-service
   labels:
     app: mob-nsapp
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: {{ .Values.certificateArn }}
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: mob-nsapp
   ports:
-    - name: https
+    - name: http
       protocol: TCP
-      port: 443
+      port: 80
       targetPort: 80
