--- a/helm/hello-world/templates/ingress.yaml
+++ b/helm/hello-world/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
@@ -13,7 +14,7 @@ metadata:
 spec:
   backend:
     serviceName: hello-world-service
-    servicePort: 443
+    servicePort: 80
   rules:
     - http:
         paths:
