--- a/helm/hello-world/templates/service.yaml
+++ b/helm/hello-world/templates/service.yaml
@@ -4,14 +4,12 @@ metadata:
   name: hello-world-service
   labels:
     app: hello-world
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:iam::473293451041:server-certificate/mob-nsapp-certificate
 spec:
   type: NodePort
-  ports:
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 80
   selector:
     app: hello-world
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
