--- a/helm/mob-nsapp/templates/ingress.yaml
+++ b/helm/mob-nsapp/templates/ingress.yaml
@@ -5,13 +5,16 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-#    alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: {{ .Values.certificateArn }}
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
   labels:
     app: mob-nsapp
 spec:
+  backend:
+    serviceName: mob-nsapp-service
+    servicePort: 80
   rules:
     - http:
         paths:
@@ -19,7 +22,3 @@ spec:
             backend:
               serviceName: ssl-redirect
               servicePort: use-annotation
-          - path: /*
-            backend:
-              serviceName: mob-nsapp-service
-              servicePort: 443
